# rust-stm32-hal2-template

./: Cargo.toml  README.md  cargo-generate.toml  flash.cfg
src/: main.rs
